plugins {
	id 'java'
 	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.newcodes7'
version = '1.0.0-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'mysql:mysql-connector-java:8.0.33' 
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	// Spring Security & JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Selenium 관련 의존성
    implementation 'org.seleniumhq.selenium:selenium-java:4.34.0'
    implementation 'io.github.bonigarcia:webdrivermanager:6.2.0'
    
    // 스케줄링
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    
    // JSON 파싱
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    implementation 'org.jsoup:jsoup:1.17.2'
    
    // RSS/Atom Feed 파싱
    implementation 'com.rometools:rome:2.1.0'
    
    // AWS S3 and CloudFront
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
    implementation 'com.amazonaws:aws-java-sdk-core:1.12.261'

    runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
    enabled = false
}